<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_menu_item"
        android:enabled="true"
        android:icon="@drawable/home_icon"
        android:title="@string/text_home"/>
    <item
        android:id="@+id/asset_list_menu_item"
        android:enabled="true"
        android:icon="@drawable/asset_list_icon"
        android:title="@string/text_asset_list"/>
    <item
        android:id="@+id/portfolio_menu_item"
        android:enabled="true"
        android:icon="@drawable/portfolio_icon"
        android:title="@string/text_portfolio_list"/>
    <item
        android:id="@+id/settings_menu_item"
        android:enabled="true"
        android:icon="@drawable/settings_icon"
        android:title="@string/text_settings"/>
</menu>