<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.assets_screen.detailed_screen.DetailedCurrencyItemFragment">

    <TextView
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:text="United States Department of the Treasury" />

    <TextView
        android:id="@+id/code_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="italic"
        tools:text="US10Y" />

    <TextView
        android:id="@+id/info_label_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/info"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/par_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        tools:text="Nominal Value: 1000$" />

    <TextView
        android:id="@+id/rate_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        tools:text="Interest Rate: 1.59%" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/issued_on"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/issue_date_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:text="01 December 2020" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maturity_date"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/maturity_date_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:text="01 December 2030" />

</LinearLayout>
