<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.assets_screen.detailed_screen.DetailedCurrencyItemFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:textStyle="bold">

        <TextView
            android:id="@+id/name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:text="United States Dollar" />

        <TextView
            android:id="@+id/code_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="italic"
            tools:text="USD" />

        <TextView
            android:id="@+id/conversion_label_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/conversion_rate" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/source_currency_picker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/currency_codes"/>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/target_currency_picker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/currency_codes"/>
        </LinearLayout>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/rates_period_chip_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/rates_week_period_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/week_period"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/rates_month_period_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/month_period"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/rates_year_period_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/year_period"/>
        </com.google.android.material.chip.ChipGroup>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/conversion_rate_chart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="222dp"/>

    </LinearLayout>
</ScrollView>
